--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Pruebas sobre listas</string>
     <string name="unItemPorFila">Un texto por fila</string>
     <string name="dosTextosPorFila">Dos textos por fila</string>
+    <string name="imagenMasTextos">Imagen y textos</string>
 </resources>
